--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "xmldom": "^0.3.0"
   }
 }
