--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "git-commit-msg-linter": "^2.7.0",
     "jest": "24.9.0",
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
