--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "jest": "24.9.0",
     "lint-staged": "^10.4.0",
     "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "prettier": "^2.1.1"
   },
   "dependencies": {
     "xmldom": "^0.3.0"
