--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,23 +2,15 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "noEmitOnError": true,
     "declaration": true,
-    "outDir": "lib",
     "strict": true,
     "rootDir": "src",
     "baseUrl": "src",
+    "outDir": "lib",
     "paths": {
-      "@/*": [
-        "*"
-      ]
+      "@/*": ["*"]
     }
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/__tests__/*"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
