chore: add test verbose script to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "tsc -w",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
     "test:watch": "npm run test -- --watch"
   },
   "husky": {
