--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./dist && tsc && webpack",
+    "build": "rm -rf ./dist && tsc",
     "watch": "tsc -w",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
@@ -45,9 +45,6 @@
     "ts-jest": "^26.3.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.2",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "xmldom": "^0.3.0"
