refactor: lib folder replaced by dist

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
     "ts-loader": "^8.0.4",
-    "typescript": "^4.0.2",
+    "typescript": "^4.0.2"
   },
   "dependencies": {
     "xmldom": "^0.3.0"
