fix: add .prettierrc.js and .eslintignore to npmignore file

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,15 @@
-tsconfig.json
-src
+__tests__
 coverage
 node_modules
-.vscode
-__tests__
-.prettierrc
-.nvmrc
+src
 jest.config.js
-.tool-versions
-.lintstagedrc.json
-.huskyrc.json
+tsconfig.json
+.eslintignore
 .eslintrc.js
 .gitignore
+.huskyrc.json
+.nvmrc
+.lintstagedrc.json
+.prettierrc.js
+.tool-versions
+.vscode
