test: implement test for many missing argument cases

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf ./dist && tsc",
     "watch": "tsc -w",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:watch": "npm run test -- --watch"
   },
