--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "husky": "^4.3.7",
     "jest": "29.6.2",
     "lint-staged": "^10.5.3",
-    "prettier": "^3.0.1",
+    "prettier": "2.2.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6"
