--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mathml-to-latex",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A JavaScript tool to convert mathml string to LaTeX string",
-  "main": "dist/index.js",
+  "main": "dist/bundle.min.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./dist && tsc",
+    "prebuild": "rm -rf ./dist",
+    "build": "webpack --devtool source-map --mode production",
     "watch": "tsc -w",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
@@ -43,7 +44,9 @@
     "prettier": "2.2.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10"
