--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
     "target": "es2015",
     "module": "commonjs",
     "esModuleInterop": true,
-    "declaration": true,
     "strict": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "lib": ["es2015", "dom"],
+    "sourceMap": true,
+    "declaration": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
