fix: overarc and overline PD-3182, PD-3184

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "link-build": "yarn build && yarn unlink || yarn link"
   },
   "repository": {
     "type": "git",
